--- a/src/Practices/Practice_07_21-22.ipynb
+++ b/src/Practices/Practice_07_21-22.ipynb
@@ -49,10 +49,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import inspect\n",
     "import sys\n",
     "from typing import Callable\n",
     "\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Newton's method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def newton(err: float = 1e-4, f: 'Callable[float]' = None, f_dev: 'Callable[float]' = None, x0: float = 0) -> float:\n",
+    "    r\"\"\"Newton's method to find roots of a function.\n",
+    "\n",
+    "    Args:\n",
+    "        err (float): Desired error of the method.\n",
+    "        f (Callable[float], optional): Analytical function to find its roots. Its input is the point to be evaluated in. Defaults to None.\n",
+    "        f_dev (Callable[float], optional): Analytical derivative of the function. Its input is the point to be evaluated in. Defaults to None.\n",
+    "        x0 (float, optional): Initial guess of the root.\n",
+    "            Note that an inadequate first guess could lead to undesired outputs such as no roots or undesired roots.\n",
+    "            Defaults to 0.\n",
+    "        \n",
+    "    Returns:\n",
+    "        float|None: Root of the function or None if the algorithm reaches its recursion limit.\n",
+    "    \"\"\"\n",
+    "    iter, iter_dict = 0, {0: x0} # Not necessary to store all the values, but anyway\n",
+    "    limit = sys.getrecursionlimit()\n",
+    "\n",
+    "    while True:\n",
+    "        if iter + 10 >= limit:\n",
+    "            print(f'Iteration limit ({limit}) reached without finding any root. Try with other initial guess or changing the recursion limit. \\\n",
+    "                    Maybe there are no roots.')\n",
+    "            return\n",
+    "\n",
+    "        iter_dict[iter+1] = iter_dict[iter] - f(iter_dict[iter]) / f_dev(iter_dict[iter])\n",
+    "\n",
+    "        if abs(iter_dict[iter+1] - iter_dict[iter]) < err:\n",
+    "            return iter_dict[iter+1]\n",
+    "\n",
+    "        iter += 1"
    ]
   },
   {
@@ -91,6 +136,64 @@
     "\n",
     "    for i in range(N-1):\n",
     "        u[i+1] = u[i] + h * f(u[i], t_[i])\n",
+    "\n",
+    "    return u\n",
+    "\n",
+    "\n",
+    "def euler_implicit(f: 'Callable[float, float]', y0: float, t0: float, t: float, h: float, *args, **kwargs) -> np.ndarray:\n",
+    "    \"\"\"Computes the implicit (backward) Euler method to solve ODEs.\n",
+    "\n",
+    "    If `f` argument has an explicit dependence on y, Newton\\' method is used to compute the next iteration the algorithm.\n",
+    "    Then, `err` must be passed as extra argument, and it is recommended to pass the analytical derivative of `f` as f_dev.\n",
+    "    In case this last `f_dev` is not passed, Newton\\' method will use finite differences to numerically obtain it.\n",
+    "\n",
+    "    See more about Newton\\' method in module roots.\n",
+    "\n",
+    "    Args:\n",
+    "        f (Callable[float, float]): Function depending on y and t in that order.\n",
+    "            Equivalent to f(y,t).\n",
+    "        y0 (float): Initial value of the answer.\n",
+    "            Equivalent to y(t0).\n",
+    "        t0 (float): Initial time.\n",
+    "        t (float): Final time.\n",
+    "        h (float): Separation between the points of the interval.\n",
+    "\n",
+    "    Returns:\n",
+    "        np.ndarray: Numerical solution of the ODE in the interval [t0, t0+h, ..., t-h, t].\n",
+    "    \"\"\"\n",
+    "    returns_of_f = inspect.getsource(f).split('return')\n",
+    "    lambdas_of_f = inspect.getsource(f).split('lambda')\n",
+    "\n",
+    "    n_returns_of_f = len(returns_of_f)\n",
+    "    n_lambdas_of_f = len(lambdas_of_f)\n",
+    "\n",
+    "    if n_returns_of_f > 2 or n_lambdas_of_f > 2:\n",
+    "        raise ValueError('Function `f` is not valid. It can only have one return or one lambda.')\n",
+    "\n",
+    "    if n_returns_of_f < 2 and n_lambdas_of_f < 2:\n",
+    "        raise ValueError('Function `f` is not valid. It must have one return or one lambda.')\n",
+    "\n",
+    "    elif n_returns_of_f == 2:\n",
+    "        function_of_f = returns_of_f[-1]\n",
+    "\n",
+    "    elif n_lambdas_of_f == 2:\n",
+    "        function_of_f = lambdas_of_f[-1].split(':')[-1]\n",
+    "\n",
+    "    t_ = np.arange(t0, t+h, h)\n",
+    "    N = len(t_)\n",
+    "\n",
+    "    u = np.zeros_like(t_)\n",
+    "    u[0] = y0\n",
+    "\n",
+    "    if 'y' in function_of_f:\n",
+    "\n",
+    "        for i in range(N-1):\n",
+    "            def g(y): return u[i] - u[i+1] + h*f(y, t_[i+1])\n",
+    "            u[i+1] = newton(f=g, differentiator=forward, x0=u[i], *args, **kwargs)\n",
+    "    else:\n",
+    "\n",
+    "        for i in range(N-1):\n",
+    "            u[i+1] = u[i] + h*f(y=None, t=t_[i+1])\n",
     "\n",
     "    return u"
    ]
