--- a/src/Practices/Practice_07_21-22.ipynb
+++ b/src/Practices/Practice_07_21-22.ipynb
@@ -140,6 +140,33 @@
     "    return u\n",
     "\n",
     "\n",
+    "def heun(f: 'Callable[float, float]', y0: float, t0: float, t: float, h: float) -> np.ndarray:\n",
+    "    \"\"\"Computes Heun's method to solve ODEs.\n",
+    "\n",
+    "    Args:\n",
+    "        f (Callable[float, float]): Function depending on y and t in that order.\n",
+    "            Equivalent to f(y,t).\n",
+    "        y0 (float): Initial value of the answer.\n",
+    "            Equivalent to y(t0).\n",
+    "        t0 (float): Initial time.\n",
+    "        t (float): Final time.\n",
+    "        h (float): Separation between the points of the interval.\n",
+    "\n",
+    "    Returns:\n",
+    "        np.ndarray: Numerical solution of the ODE in the interval [t0, t0+h, t-h, t].\n",
+    "    \"\"\"\n",
+    "    t_ = np.arange(t0, t+h, h)\n",
+    "    N = len(t_)\n",
+    "\n",
+    "    u = np.zeros_like(t_)\n",
+    "    u[0] = y0\n",
+    "\n",
+    "    for i in range(N-1):\n",
+    "        u[i+1] = u[i] + h/2 * (f(u[i]+h*f(u[i], t_[i]), t_[i+1]) + f(u[i], t_[i]))\n",
+    "\n",
+    "    return u\n",
+    "\n",
+    "\n",
     "def euler_implicit(f: 'Callable[float, float]', y0: float, t0: float, t: float, h: float, *args, **kwargs) -> np.ndarray:\n",
     "    \"\"\"Computes the implicit (backward) Euler method to solve ODEs.\n",
     "\n",
@@ -161,6 +188,8 @@
     "    Returns:\n",
     "        np.ndarray: Numerical solution of the ODE in the interval [t0, t0+h, ..., t-h, t].\n",
     "    \"\"\"\n",
+    "    # ------ This part checks if the ode depends on y (to use newton) or only on t ----\n",
+    "\n",
     "    returns_of_f = inspect.getsource(f).split('return')\n",
     "    lambdas_of_f = inspect.getsource(f).split('lambda')\n",
     "\n",
@@ -178,6 +207,8 @@
     "\n",
     "    elif n_lambdas_of_f == 2:\n",
     "        function_of_f = lambdas_of_f[-1].split(':')[-1]\n",
+    "\n",
+    "    # -----------\n",
     "\n",
     "    t_ = np.arange(t0, t+h, h)\n",
     "    N = len(t_)\n",
