--- a/src/Practices/Practice_8_21-22.ipynb
+++ b/src/Practices/Practice_8_21-22.ipynb
@@ -81,20 +81,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation of methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def euler_explicit_midpoint(f: 'Callable[float, float]', y0: float, t0: float, t: float, h: float) -> np.ndarray:\n",
+    "    r\"\"\"Computes the explicit (forward) midpoint Euler method to solve ODEs.\n",
     "\n",
+    "    The **explicit midpoint method** is :math: `u_{n+1}=u_{n-1}+2hf\\left(t_n,u_n\\right)`\n",
     "\n",
-    "\n",
-    "def euler_explicit_midpoint(f:'Callable[float, float]', y0:float, t0:float, t:float, h:float)-> np.ndarray:\n",
-    "    \"\"\"Computes the explicit (forward) midpoint Euler method to solve ODEs.\n",
+    "    As two initial values are required, if y0_previous is not provided, it is computed with :math: `$y(-h)=y(0)-hf(0,y(0))$`.\n",
     "\n",
     "    Args:\n",
     "        f (Callable[float, float]): Function depending on y and t in that order.\n",
@@ -106,25 +127,25 @@
     "        h (float): Separation between the points of the interval.\n",
     "\n",
     "    Returns:\n",
-    "        np.ndarray: Numerical solution of the ODE in the interval [t0, t0+h, t-h, t].\n",
+    "        np.ndarray: Numerical solution of the ODE in the interval [t0, t0+h, ..., t-h, t].\n",
     "    \"\"\"\n",
-    "    t_ = np.arange(t0, t0+t, h) \n",
+    "    t_ = np.arange(t0, t+h, h)\n",
     "    N = len(t_)\n",
     "\n",
     "    u = np.zeros_like(t_)\n",
     "    u_previous = y0 - h * f(y0, t_[0])\n",
     "    u[0] = y0\n",
-    " \n",
+    "\n",
     "    for i in range(N-1):\n",
     "        if i == 0:\n",
-    "            u[i+1] = u_previous +2 * h * f(u[i], t_[i])    \n",
+    "            u[i+1] = u_previous + 2 * h * f(u[i], t_[i])\n",
     "        else:\n",
-    "            u[i+1] = u[i-1] + 2 *h * f(u[i], t_[i])\n",
-    "    \n",
-    "    return u, t_\n",
+    "            u[i+1] = u[i-1] + 2 * h * f(u[i], t_[i])\n",
     "\n",
-    "def euler_explicit(f:'Callable[float, float]', y0:float, t0:float, t:float, h:float)-> np.ndarray:\n",
-    "    \"\"\"Computes the explicit (forward) Euler method to solve ODEs.\n",
+    "    return u\n",
+    "\n",
+    "def euler_explicit(f: 'Callable[float, float]', y0: float, t0: float, t: float, h: float) -> np.ndarray:\n",
+    "    r\"\"\"Computes the explicit (forward) Euler method to solve ODEs.\n",
     "\n",
     "    Args:\n",
     "        f (Callable[float, float]): Function depending on y and t in that order.\n",
@@ -136,31 +157,47 @@
     "        h (float): Separation between the points of the interval.\n",
     "\n",
     "    Returns:\n",
-    "        np.ndarray: Numerical solution of the ODE in the interval [t0, t0+h, t-h, t].\n",
+    "        np.ndarray: Numerical solution of the ODE in the interval [t0, t0+h, ..., t-h, t].\n",
     "    \"\"\"\n",
-    "    t_ = np.arange(t0, t0+t, h) \n",
+    "    t_ = np.arange(t0, t+h, h)\n",
     "    N = len(t_)\n",
     "\n",
     "    u = np.zeros_like(t_)\n",
     "    u[0] = y0\n",
-    " \n",
+    "\n",
     "    for i in range(N-1):\n",
     "        u[i+1] = u[i] + h * f(u[i], t_[i])\n",
-    "    \n",
+    "\n",
     "    return u, t_\n",
     "\n",
-    "def euler_explicit_systems(f:'Callable[float, ...]', vec0:np.ndarray, t0:float, t:float, h:float)-> np.ndarray:\n",
+    "def euler_explicit_systems(f: 'Callable[float, ...]', vec0: np.ndarray, t0: float, t: float, h: float) -> np.ndarray:\n",
+    "    r\"\"\"Computes the explicit (forward) Euler method to solve a system of ODEs.\n",
     "\n",
-    "    t_ = np.arange(t0, t0+t, h)  \n",
+    "    The order of the arguments (variables) in `f` must the the same of the values in `vec0`.\n",
+    "\n",
+    "    Args:\n",
+    "        f (Callable[float, ...]): Function depending on the any number of variables.\n",
+    "            Currently it does not support explicit dependence on time.\n",
+    "            Equivalent to f(y,t).\n",
+    "        vec0 (np.ndarray): Initial values of the answer.\n",
+    "            Equivalent to [x(t0), y(t0), ...].\n",
+    "        t0 (float): Initial time.\n",
+    "        t (float): Final time.\n",
+    "        h (float): Separation between the points of the interval.\n",
+    "\n",
+    "    Returns:\n",
+    "        np.ndarray: Numerical solution of the ODE in the interval [t0, t0+h, ..., t-h, t].\n",
+    "    \"\"\"\n",
+    "    t_ = np.arange(t0, t+h, h)\n",
     "    N = len(t_)\n",
     "\n",
     "    u = np.zeros((vec0.shape[0], N))\n",
     "\n",
     "    u[:, t0] = vec0\n",
-    " \n",
+    "\n",
     "    for i in range(N-1):\n",
     "        u[..., i+1] = u[..., i] + h * f(*u[..., i])\n",
-    "    \n",
+    "\n",
     "    return u, t_\n",
     "\n",
     "\n",
