--- a/src/Practices/Practice_8_21-22.ipynb
+++ b/src/Practices/Practice_8_21-22.ipynb
@@ -142,7 +142,7 @@
     "        else:\n",
     "            u[i+1] = u[i-1] + 2 * h * f(u[i], t_[i])\n",
     "\n",
-    "    return u\n",
+    "    return u, t_\n",
     "\n",
     "def euler_explicit(f: 'Callable[float, float]', y0: float, t0: float, t: float, h: float) -> np.ndarray:\n",
     "    r\"\"\"Computes the explicit (forward) Euler method to solve ODEs.\n",
