--- a/src/Practices/Practice_8_21-22.ipynb
+++ b/src/Practices/Practice_8_21-22.ipynb
@@ -94,7 +94,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -198,8 +198,22 @@
     "    for i in range(N-1):\n",
     "        u[..., i+1] = u[..., i] + h * f(*u[..., i])\n",
     "\n",
-    "    return u, t_\n",
-    "\n",
+    "    return u, t_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solving IVPs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def exercise1(section, method):\n",
     "\n",
@@ -207,6 +221,7 @@
     "            \n",
     "        h = [0.5, 0.25, 0.1]\n",
     "        t0, t = 0, 1\n",
+    "    \n",
     "    elif section==2:\n",
     "        h = [0.1]\n",
     "        t0, t = 0, 100  \n",
@@ -226,39 +241,46 @@
     "    plt.show()\n",
     "\n",
     "\n",
+    "exercise1(1, euler_explicit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t0, tf = 0, 50\n",
+    "vec0 = np.array([0, 1, 1.05])\n",
     "\n",
-    "def exercise2():\n",
+    "s, r, b = 10, 28, 8/3\n",
     "\n",
-    "    t0, tf = 0, 50\n",
-    "    vec0 = np.array([0, 1, 1.05])\n",
+    "f = lambda x, y, z: np.array([s*(y-x), x*(r-z)-y, x*y - b*z])\n",
     "\n",
-    "    s, r, b = 10, 28, 8/3\n",
+    "h = 1e-4\n",
     "\n",
-    "    f = lambda x, y, z: np.array([s*(y-x), x*(r-z)-y, x*y - b*z])\n",
-    "    \n",
-    "    h = 1e-4\n",
+    "u, _ = euler_explicit_systems(f, vec0, t0, tf, h)\n",
     "\n",
-    "    u, _ = euler_explicit_systems(f, vec0, t0, tf, h)\n",
+    "fig = plt.figure(figsize = (10,10))\n",
     "\n",
-    "    fig = plt.figure(figsize = (10,10))\n",
+    "ax = plt.axes(projection='3d')\n",
     "\n",
-    "    ax = plt.axes(projection='3d')\n",
+    "ax.grid()\n",
     "\n",
-    "    ax.grid()\n",
+    "ax.plot3D(u[0,:], u[1, :], u[2, :])\n",
     "\n",
-    "    ax.plot3D(u[0,:], u[1, :], u[2, :])\n",
+    "ax.set_xlabel('x', labelpad=20)\n",
+    "ax.set_ylabel('y', labelpad=20)\n",
+    "ax.set_zlabel('z', labelpad=20)\n",
     "\n",
-    "    ax.set_xlabel('x', labelpad=20)\n",
-    "    ax.set_ylabel('y', labelpad=20)\n",
-    "    ax.set_zlabel('z', labelpad=20)\n",
-    "\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "if __name__=='__main__':\n",
-    "    \n",
-    "    # exercise1(1, euler_explicit)\n",
-    "    exercise2()"
+    "plt.show()"
    ]
   }
  ],
