--- a/src/Practices/Practice_8_21-22.ipynb
+++ b/src/Practices/Practice_8_21-22.ipynb
@@ -101,6 +101,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Implementation of methods"
    ]
   },
